test: 채팅방 생성 서비스 및 컨트롤러 테스트 추가
Signed-off-by: TreeBomb-01 <htb010630@gmail.com>