@@ -70,4 +70,5 @@ dependencyLocking {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs('-XX:+EnableDynamicAgentLoading')
 }
